style.css
body {
  background-image: url(./pixil-frame-0.png);
  display: flex;
  justify-content: center;
}

#playpause {
  width: 6rem;
  padding-top: 2rem;
  padding-left: 2rem;
}

canvas {
  padding-top: 2.5rem;
  display: none;
}

#gameView {
  display: flex;
  justify-content: center;
  padding-right: 5rem;
  padding-top: 50px;
}

.gameTittle {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.gameSide {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#timerShow {
  font-size: 3rem;
  font-weight: 700;
  color: #43abff;
}

#counter {
  display: flex;
  align-items: center;
}

#gemsBox {
  background-color: rgb(31, 13, 2);
  border: 1rem solid rgb(87, 58, 20);
  width: 42rem;
  height: 30rem;
  margin-top: 2rem;
}

#gemsBox > img {
  width: 4rem;
}

.gemsCounter {
  font-size: 5rem;
  color: blueviolet;
}
.gameTittle > img {
  width: 50%;
}
.gameSide > img {
  width: 75%;
  padding-bottom: 2.5rem;
  padding-top: 2.5rem;
}
#startGame {
  height: 5rem;
  width: 15rem;
  font-size: 2rem;
  font-weight: 700;
  background-color: rgb(43, 137, 226);
  color: blueviolet;
  box-shadow: 5px 5px 15px 10px #a95aff;
  margin-top: 8rem;
}

#instructions {
  height: 5rem;
  width: 16rem;
  font-size: 2rem;
  font-weight: 700;
  background-color: rgb(43, 137, 226);
  color: blueviolet;
  box-shadow: 5px 5px 15px 10px #a95aff;
  margin-left: 1rem;
  margin-top: 8rem;
}

